--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-PORT=8080
-NODE_ENV=development
-URL_REACT=http://localhost:3000
-MAX_NUMBER_SCHEDULE=10
+PORT=
+NODE_ENV=
+URL_REACT=
+MAX_NUMBER_SCHEDULE=
+EMAIL_APP_PASSWORD=
+EMAIL_APP=
